# sqlite-regex

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  VERSION  cbindgen.toml  docs.md  sqlite-regex.h  sqlpkg.json  test.sql
.cargo/: config
.github/workflows/: release.yaml  rename-wheels.py  test.yaml  upload-deno-assets.js  upload.js
benchmarks/: Makefile  README.md  bench-sqlite.sh  bench.sh  build-duckdb.sql  build-sqlite.sql  build-words.sql  regexp.sql  sqlean.sql  this-pointer.sql  this.sql  thisx.sql
benchmarks/dates/: bench-dates.sh  regexp.sh  results.json  sqlean-re.sh  sqlite-regex.sh
benchmarks/new/: .gitignore  README.md  bench-dates.sh  regexp-dates.sh  sqlean-re-dates.sh
benchmarks/random/: regexp.sh  results.json  sqlean-re.sh  sqlite-regex.sh
benchmarks/todo/: bench-internal.sh  duckdb.sql  sqlite-regex-email.sh  sqlite-regex-ipv4.sh  sqlite-regex-uri.sh
bindings/ruby/: sqlite_regex.gemspec
bindings/ruby/lib/: sqlite_regex.rb  version.rb  version.rb.tmpl
bindings/sqlite-utils/: README.md  pyproject.toml  pyproject.toml.tmpl
bindings/sqlite-utils/sqlite_utils_sqlite_regex/: __init__.py  version.py
deno/: README.md  README.md.tmpl  deno.json  deno.json.tmpl  mod.ts  test.ts
npm/: README.md
npm/sqlite-regex/: README.md  package.json  package.json.tmpl  test.js
npm/sqlite-regex-darwin-arm64/: README.md  package.json
npm/sqlite-regex-darwin-x64/: README.md  package.json
npm/sqlite-regex-linux-x64/: README.md  package.json
npm/sqlite-regex-windows-x64/: README.md  package.json
npm/sqlite-regex/src/: index.js
python/: README.md
python/datasette_sqlite_regex/: README.md  setup.py
python/datasette_sqlite_regex/datasette_sqlite_regex/: __init__.py  version.py
python/datasette_sqlite_regex/tests/: test_sqlite_regex.py
python/sqlite_regex/: README.md  setup.py
python/sqlite_regex/sqlite_regex/: __init__.py  version.py
scripts/: deno_generate_package.sh  npm_generate_platform_packages.sh
src/: captures.rs  find_all.rs  lib.rs  meta.rs  regex.rs  regexp.rs  regexset.rs  regexset_matches.rs  split.rs  utils.rs
tests/: test-loadable.py  test-python.py
